--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -709,7 +709,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://62.217.178.166:3000';
+        const API_BASE = "/api";
         let token = localStorage.getItem('admin_token');
 
         // Check if admin exists on page load
